welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: ';' expected but 'for' found.
  }for(compteur1 <- 1 to pas){
   ^